<resources>
    <string name="app_name">Jogo da Velha</string>
    <string name="novo_jogo">Novo Jogo</string>
    <string name="nova_partida">Começar Partida</string>
    <string name="recomecar">Recomeçar</string>
    <string name="nome_dos_jogadores">Nome dos Jogadores</string>
    <string name="jogador_1">Jogador 1</string>
    <string name="jogador_2">Jogador 2</string>
    <string name="ver_historico">Ver Histórico</string>
</resources>