<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:elevation="10dp">


    <ImageView
        android:id="@+id/imagemLogo"
        android:layout_width="331dp"
        android:layout_height="253dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jogo_da_velha" />

    <View
        android:id="@+id/view"
        android:layout_width="328dp"
        android:layout_height="248dp"
        android:layout_marginTop="24dp"
        android:alpha="1.0"
        android:background="@drawable/gradient"
        android:elevation="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagemLogo" />

    <Button
        android:id="@+id/comecar_partida"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/amarelo"
        android:elevation="10dp"
        android:text="@string/nova_partida"
        android:textColor="@color/lilas"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/historico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/historico"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/amarelo"
        android:elevation="10dp"
        android:text="@string/ver_historico"
        android:textColor="@color/lilas"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comecar_partida" />

    <TextView
        android:id="@+id/nome_dos_jogadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="50dp"
        android:text="@string/nome_dos_jogadores"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.045" />

    <EditText
        android:id="@+id/edit_text_player1"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:elevation="50dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/jogador_1"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/nome_dos_jogadores"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edit_text_player2"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:elevation="50dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/jogador_2"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_player1"
        app:layout_constraintVertical_bias="0.363" />


</androidx.constraintlayout.widget.ConstraintLayout>